# Software_Tools

./: 0_coding_design_patterns.html  0_make.html  0_proxmox.html  0_service.html  0_vim.html  1_coding_algorithms.html  1_journalctl.html  1_just.html  1_neovim.html  1_proxmox_storage.html  LICENSE  README.md  ast.html  bash.html  camera_testing.html  coding_design_patterns.html  conda.html  index.html  jupyter_labs.html  latex_setup.html  linux_computer.html  linux_users.html  mfa.html  openclaw.html  openvpn.html  proxmox.html  pyproject.toml  quarto.html  regex.html  robots.txt  search.json  service.html  settings.ini  sitemap.xml  sound_testing.html  tmux.html  vim.html  vscode_debugging.html  wireguard.html  wsl.html
C++/: c++.html
Camera_sound/: camera_testing.html  sound_testing.html
Environments/: conda.html  direnv.html  pipenv.html  poetry.html  uv.html  variables.html  venv.html
Linux/: bash_scritps.html  display_system.html  journalctl.html  linux_computer.html  linux_users.html  service.html  shell_commands.html
Platform_IO/: platformio_basics.html
Software_Tools/: _modidx.py
_proc/: 01_Tmux.ipynb  02_Bash.ipynb  03_0_Proxmox.ipynb  03_1_Proxmox_storage.ipynb  03_Proxmox.ipynb  04_Linux_Users.ipynb  05_0_Vim.ipynb  05_1_Neovim.ipynb  05_Vim.ipynb  06_0_Coding_Design_Patterns.ipynb  06_1_Coding_Algorithms.ipynb  06_Coding_Design_Patterns.ipynb  07_VScode_Debugging.ipynb  08_Service.ipynb  09_Jupyter_Labs.ipynb  10_Latex_Setup.ipynb  11_WSL.ipynb  12_Quarto.ipynb  13_0_Make.ipynb  13_1_Just.ipynb  16_Regex.ipynb  index.ipynb  nbdev.yml  script.sh
(+878 files in other folders)
